(tests
 (names test_cbor test_cardano_types test_mux test_handshake test_chain_sync
        test_block_fetch test_tx_submission test_keep_alive
        test_local_chain_sync test_local_state_query
        test_local_tx_submission test_local_tx_monitor
        test_consensus test_crypto test_network test_chain_sync_live
        test_keep_alive_live test_store test_sync_pipeline
        test_block_decoder test_tx_decoder
        test_header_validation test_chain_validation test_utxo
        test_ledger_state test_crypto_real test_block_validator
        test_integration test_genesis test_conservation
        test_multi_asset test_mithril test_local_server
        test_mempool test_block_forge test_slot_leader test_peer
        test_mainnet test_governance test_topology
        test_kes_real test_vrf_real test_perf)
 (libraries meridian alcotest))
